--- a/views/partials/dashboard/dashboard_header.ejs
+++ b/views/partials/dashboard/dashboard_header.ejs
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="/images/logo.ico" type="image/x-icon">
     <script src="https://unpkg.com/feather-icons"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
 <body>
 
@@ -33,19 +32,19 @@
             <div class="position-sticky pt-3 sidebar-sticky">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/admin/dashboard/">
+                  <a class="nav-link <%= pageName === "dashboard" ? "active" : ""  %>" aria-current="page" href="/admin/dashboard/">
                     <span data-feather="home" class="align-text-bottom"></span>
                     Dashboard
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/admin/dashboard/post">
+                  <a class="nav-link <%= pageName === "post" ? "active" : ""  %>" href="/admin/dashboard/post">
                     <span data-feather="file" class="align-text-bottom"></span>
                     Post
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/admin/dashboard/users">
+                  <a class="nav-link <%= pageName === "users" ? "active" : ""  %>" href="/admin/dashboard/users">
                     <span data-feather="users" class="align-text-bottom"></span>
                     Users
                   </a>
