--- a/views/admin/admin_user.ejs
+++ b/views/admin/admin_user.ejs
@@ -1,10 +1,8 @@
 <%- include("../partials/dashboard/dashboard_header") %> 
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">Post</h1>
+    <h1 class="h2">User</h1>
 </div>
-
-<a class="btn btn-primary" href="/admin/dashboard/post/add-post">Add Post</a>
 
 <%- include("../partials/dashboard/dashboard_footer") %> 
 
