--- a/views/admin/admin_add_post.ejs
+++ b/views/admin/admin_add_post.ejs
@@ -1,12 +1,38 @@
 <%- include("../partials/dashboard/dashboard_header") %> 
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2"> Add Post</h1>
+  <h1 class="h2"> Add New Post</h1>
 </div>
 
-<form action="/admin/dashboard/post/add-post" method="post">
-    <input id="x" type="hidden" name="content">
-    <trix-editor input="x"></trix-editor>
+
+<form action="/admin/dashboard/post/add-post" method="post" enctype="multipart/form-data">
+
+  <img id="preview-img" width="300" height="300" hidden>
+
+  
+  <div class="row mb-3">
+    <div class="col">
+      <label for="title" class="form-label">Title</label>
+      <input type="text" name="title" id="title" class="form-control">
+    </div>
+    <div class="col">
+      <label for="thumbnail" class="form-label">Thumbnail</label>
+      <input class="form-control" type="file" id="thumbnail" name="thumbnail">
+    </div>
+  </div>
+
+  <div class="mb-3">
+    <label for="tag">Tags</label>
+    <input class="form-control" type="text" name="tag" id="tag">
+  </div>
+  
+  <div class="mb-3">
+    <label for="content">Content</label>
+    <input id="content" type="hidden" name="content">
+    <trix-editor input="content"></trix-editor>
+  </div>
+
+    
     <button class="btn btn-primary" type="submit">Add Post</button>
 </form>
 
