--- a/views/partials/dashboard/dashboard_header.ejs
+++ b/views/partials/dashboard/dashboard_header.ejs
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="/images/logo.ico" type="image/x-icon">
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
+    <link rel="stylesheet" href="/css/jquery.tag-editor.css">
     <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
+    <script src="/js/jquery.caret.min.js"></script>
+    <script src="/js/jquery.tag-editor.min.js"></script>
+    
 </head>
 <body>
 
