add user management and search bar feature

--- a/views/admin/admin_post.ejs
+++ b/views/admin/admin_post.ejs
@@ -7,8 +7,8 @@
 <a class="act-btn" href="/admin/dashboard/post/add-post">+</a>
 
 <div class="input-group mb-3">
-  <input class="form-control" type="text" name="search" id="search">
-  <button class="btn btn-outline-secondary" type="button">Search</button>
+  <input class="form-control" type="text" name="search" id="searchValue">
+  <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
 </div>
 
 <table class="table">
