--- a/views/admin/admin_add_user.ejs
+++ b/views/admin/admin_add_user.ejs
@@ -5,24 +5,35 @@
 </div>
 
 <form action="/admin/dashboard/users/add-user" method="post">
-<div class="mb-3">
-    <label class="form-label" for="username">Username</label>
-    <input class="form-control" type="text" name="username" id="username">
-</div>
-<div class="mb-3">
-    <label class="form-label" for="fullname">Fullname</label>
-    <input class="form-control" type="text" name="fullname" id="fullname">
+<div class="row">
+    <div class="col mb-3">
+        <label class="form-label" for="username">Username</label>
+        <input class="form-control" type="text" name="username" id="username">
+    </div>
+    <div class="col mb-3">
+        <label class="form-label" for="fullname">Fullname</label>
+        <input class="form-control" type="text" name="fullname" id="fullname">
+    </div>
 </div>
 <div class="mb-3">
     <label class="form-label" for="email">Email</label>
     <input class="form-control" type="email" name="email" id="email">
 </div>
-<div class="mb-3">
-    <label class="form-label" for="password">Password</label>
-    <input class="form-control" type="password" name="password" id="password">
+<div class="row">
+    <div class="col mb-3">
+        <label class="form-label" for="password">Password</label>
+        <input class="form-control" type="password" name="password" id="password">
+    </div>
+    <div class="col mb-3">
+        <label class="form-label" for="confirmPassword">Confirm Password</label>
+        <input class="form-control" type="password" name="confirmPassword" id="confirmPassword">
+    </div>
 </div>
 <div class="mb-3">
-    <button class="btn btn-primary" type="submit">Save User</button>
+    <button class="btn btn-primary" type="submit" id="saveChangesButton">
+        <span data-feather="save"></span>
+        Save Changes
+    </button>
 </div>
 </form>
 
