--- a/views/admin/admin_dashboard.ejs
+++ b/views/admin/admin_dashboard.ejs
@@ -1,11 +1,46 @@
 <%- include("../partials/dashboard/dashboard_header") %> 
             
 
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-              <h1 class="h2">Dashboard</h1>
-            </div>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+  <h1 class="h2">Dashboard</h1>
+  <h1>Welcome, <%= user.fullname %> </h1>
+</div>
 
-            <h1>Welcome, <%= user.fullname %> </h1>
+
+  
+
+ 
+ <div class="row">
+  <div class="col">
+    <div class="card-info me-3" style="background: #73AD21;">
+      <div class="row">
+        <div class="col">
+          <span class="dashboard-logo-info" data-feather="user"></span>
+        </div>
+        <div class="col">
+          <h1>Users</h1>
+          <h2><%= userCount %></h2>
+        </div>
+      </div>
+  </div>
+
+  <div class="card-info" style="background-color: #537FE7;">
+    <div class="row">
+      <div class="col">
+        <span class="dashboard-logo-info" data-feather="file-text"></span>
+      </div>
+      <div class="col">
+        <h1>Posts</h1>
+        <h2><%= postCount %></h2>
+      </div>
+    </div>
+ </div>
+  
+
+</div>
+
+
+
 
 <%- include("../partials/dashboard/dashboard_footer") %> 
 
