--- a/views/admin/admin_user.ejs
+++ b/views/admin/admin_user.ejs
@@ -1,45 +1,47 @@
 <%- include("../partials/dashboard/dashboard_header") %> 
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">User</h1>
+    <h1 class="h2">User List</h1>
+    <a class="btn btn-primary" href="/admin/dashboard/users/add-user">
+        <span data-feather="plus"></span>
+        Add User
+    </a>
 </div>
 
-<div class="input-group mb-3">
-    <input class="form-control" type="text" name="search" id="searchValue">
-    <button class="btn btn-outline-secondary" type="button" id="searchButton">Search</button>
-  </div>
+<div class="mb-3">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Username</th>
+                <th scope="col">Fullname</th>
+                <th scope="col">Email</th>
+                <th scope="col">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% users.forEach(user => { %>
+             <tr>
+                <td><%= user.username %></td>
+                <td><%= user.fullname %></td>
+                <td><%= user.email %></td>
+                <td>
+                    <a class="btn btn-success" href="/admin/dashboard/users/edit/<%= user._id %>">
+                        <span data-feather="edit"></span>
+                        Edit
+                    </a>
+                    <a class="btn btn-danger" href="/admin/dashboard/users/delete/<%= user._id %>">
+                        <span data-feather="delete"></span>
+                        Delete
+                    </a>
+                </td>
+             </tr>
+            <% }) %>
+        </tbody>
+        </table>
+        
+</div>
 
-<table class="table">
-<thead>
-    <tr>
-        <th scope="col">Username</th>
-        <th scope="col">Fullname</th>
-        <th scope="col">Email</th>
-        <th scope="col">Action</th>
-    </tr>
-</thead>
-<tbody>
-    <% users.forEach(user => { %>
-     <tr>
-        <td><%= user.username %></td>
-        <td><%= user.fullname %></td>
-        <td><%= user.email %></td>
-        <td>
-            <a class="btn btn-success" href="/admin/dashboard/users/edit/<%= user._id %>">
-                <span data-feather="edit"></span>
-                Edit
-            </a>
-            <a class="btn btn-danger" href="/admin/dashboard/users/delete/<%= user._id %>">
-                <span data-feather="delete"></span>
-                Delete
-            </a>
-        </td>
-     </tr>
-    <% }) %>
-</tbody>
-</table>
 
-<a class="btn btn-primary" href="/admin/dashboard/users/add-user">Add User</a>
 
 <%- include("../partials/dashboard/dashboard_footer") %> 
 
