--- a/views/partials/dashboard/dashboard_header.ejs
+++ b/views/partials/dashboard/dashboard_header.ejs
@@ -15,7 +15,9 @@
     <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
     <script src="/js/jquery.caret.min.js"></script>
     <script src="/js/jquery.tag-editor.min.js"></script>
-    
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.2/css/dataTables.bootstrap5.min.css">
+    <script src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.2/js/dataTables.bootstrap5.min.js"></script>
 </head>
 <body>
 
