add management admin

--- a/views/admin/admin_user.ejs
+++ b/views/admin/admin_user.ejs
@@ -2,11 +2,12 @@
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">User List</h1>
-    <a class="btn btn-primary" href="/admin/dashboard/users/add-user">
-        <span data-feather="plus"></span>
-        Add User
-    </a>
 </div>
+
+<a class="btn btn-primary mb-5" href="/admin/dashboard/users/add-user">
+    <span data-feather="plus"></span>
+    Add User
+</a>
 
 <div class="mb-3">
     <table class="table">
