--- a/views/admin/admin_add_post.ejs
+++ b/views/admin/admin_add_post.ejs
@@ -33,7 +33,10 @@
   </div>
 
     
-    <button class="btn btn-primary" type="submit">Add Post</button>
+    <button class="btn btn-primary" type="submit">
+      <span data-feather="plus"></span>
+      Add Post
+    </button>
 </form>
 
 <%- include("../partials/dashboard/dashboard_footer") %> 
