--- a/views/partials/dashboard/dashboard_header.ejs
+++ b/views/partials/dashboard/dashboard_header.ejs
@@ -57,6 +57,12 @@
                     Users
                   </a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link <%= pageName === "admin" ? "active" : ""  %>" href="/admin/dashboard/admin-management">
+                    <span data-feather="users" class="align-text-bottom"></span>
+                    Admin Management
+                  </a>
+                </li>
               </ul>
           </nav>
           <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
